--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <script src="main.js"></script>
+        <script src="main.js">
+            showSlides(1);
+        </script>
         <header class="main-header">
             <!-- Leave space for logo.png to serve as the home button-->
             <div class="header-container"> <!-- Container for all content in header -->
