--- a/pastorAbout.html
+++ b/pastorAbout.html
@@ -25,5 +25,15 @@
                 </nav>
             </div>
         </header>
-        <p>Pastor About Page</p>
+
+        <div class="pastor-about-container">
+            <div class="pastor-about-image-container">
+                <img class="pastor-about-image" src="aboutStockImage1.jpg">
+            </div>
+            <div class="pastor-about-text">
+                <p>
+                    This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. 
+                </p>
+            </div
+        </div>
     </body>
