--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <script src="main.js">
-            showSlides(1);
-        </script>
         <header class="main-header">
             <!-- Leave space for logo.png to serve as the home button-->
             <div class="header-container"> <!-- Container for all content in header -->
                 <div class="logo-container">
-                    <a href="index.html"><img src = "stockLogo.png" alt="Iglesia Restauracion Logo" class="church-logo"> </a>
+                    <a href="index.html"><img src = "17.png" alt="Iglesia Restauracion Logo" class="church-logo"> </a>
                 </div>
                 <nav class="nav main-nav">
                     <ul class="main-nav-list">
@@ -63,7 +60,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
 
-         
+        <script src="main.js"></script>     
     </body>
 
 </html>
