--- a/pastorAbout.html
+++ b/pastorAbout.html
@@ -13,7 +13,7 @@
             <!-- Leave space for logo.png to serve as the home button-->
             <div class="header-container"> <!-- Container for all content in header -->
                 <div class="logo-container">
-                    <a href="index.html"><img src = "stockLogo.png" alt="Iglesia Restauracion Logo" class="church-logo"> </a>
+                    <a href="index.html"><img src = "17.png" alt="Iglesia Restauracion Logo" class="church-logo"> </a>
                 </div>
                 <nav class="nav main-nav">
                     <ul class="main-nav-list">
