--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Iglesia De Restauracion San Bernardino</title>
         <link rel="stylesheet" href="styles.css">
+        <!-- Icon for hamburger menus used on smaller screens-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            
     </head>
     <body>
         <header class="main-header">
@@ -15,14 +18,18 @@
                     <a href="index.html"><img src = "17.png" alt="Iglesia Restauracion Logo" class="church-logo"> </a>
                 </div>
                 <nav class="nav main-nav">
-                    <ul class="main-nav-list">
+                    <ul class="main-nav-list hidden-nav-links" id="nav-links">
                         <a href="pastorAbout.html"><li>Nuestro Pastor</li></a>
                         <li>Ministerio de Alabanza</li>
                         <li>Eventos</li>
                         <li>Contacto</li>
                     </ul>
+                    <a href="#" class="mobile-nav-icon" id="hamburger-menu">
+                        <i class="fa fa-bars"></i>
+                    </a>
                 </nav>
             </div>
+            
         </header>
 
         <!-- Slideshow Container -->
