Added content to ministerio page

--- a/celulas.html
+++ b/celulas.html
@@ -37,7 +37,24 @@
             </header>
         </div>
 
+    <footer class="main-footer">
+            <div class="footer-container">
+                <div class="church-info-container">
+                    <h3 class="church-info-text">Iglesia Restauracion San Bernardino</h3>
+                    <p class="church-info-text">172 W Highland Ave</p>
+                    <p class="church-info-text">San Bernardino, CA 92405</p>
+                    <a href="tel:(909)-265-6877" class="church-info-text">(909) 265-6877</a>
+                </div>
+                <div class="social-media-container">
+                    <a href="https://www.facebook.com/restauracion.sanbernardino" target="_blank"><img src="SocialMediaIcons/IconFacebook1.svg"></a>
+                    <a href="https://www.instagram.com/restauracionsanbernardino/" target="_blank"><img src="SocialMediaIcons/IconInstagram1.svg"></a>
+                    <a href="https://www.youtube.com/@iglesiaderestauracionsanbe9627" target="_blank"><img src="SocialMediaIcons/IconYouTube1.svg"></a>
+                    <a href="mailto: restauracionsb@yahoo.com"><img src="SocialMediaIcons/IconEmail1.svg"></a>
+                </div>
+            </div>
+        </footer>
 
+        <script src="main.js"></script>
     </body>
 
 
