--- a/ministerioAlabanza.html
+++ b/ministerioAlabanza.html
@@ -25,19 +25,46 @@
                                 <a class="nav-list-links" href="ministerioAlabanza.html">Ministerio de Alabanza</a>
                                 <a class="nav-list-links" href="celulas.html">Celulas</a>
                                 <a class="nav-list-links" href="eventos.html">Eventos</a>
-                                <a class="nav-list-links" href="contacto.html">Contacto</a>>
+                                <a class="nav-list-links" href="contacto.html">Contacto</a>
                             </div>
                             <a href="#" class="mobile-nav-icon" id="hamburger-menu" onclick="responsiveMenu()">
                                 <i class="fa fa-bars"></i>
                             </a>
                         </div>
-                        
                     </nav>
                 </div>
             </header>
+
+            <div class="alabanzaYoutubeContainer">
+                <iframe width="1000" height="550" src="https://www.youtube.com/embed/TIzv4SAWF9c?si=y9RsxIrjnknzj9V_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+            <div class="alabanzaDescriptionContainer">
+                <p class="alabanzaDescText">
+                    This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text. 
+                </p>
+                <img class= "alabanzaDescImage" src="Images/bandStockImage.jpg">
+            </div>
         </div>
 
+        <footer class="main-footer">
+            <div class="footer-container">
+                <div class="church-info-container">
+                    <h3 class="church-info-text">Iglesia Restauracion San Bernardino</h3>
+                    <p class="church-info-text">172 W Highland Ave</p>
+                    <p class="church-info-text">San Bernardino, CA 92405</p>
+                    <a href="tel:(909)-265-6877" class="church-info-text">(909) 265-6877</a>
+                </div>
+                <div class="social-media-container">
+                    <a href="https://www.facebook.com/restauracion.sanbernardino" target="_blank"><img src="SocialMediaIcons/IconFacebook1.svg"></a>
+                    <a href="https://www.instagram.com/restauracionsanbernardino/" target="_blank"><img src="SocialMediaIcons/IconInstagram1.svg"></a>
+                    <a href="https://www.youtube.com/@iglesiaderestauracionsanbe9627" target="_blank"><img src="SocialMediaIcons/IconYouTube1.svg"></a>
+                    <a href="mailto: restauracionsb@yahoo.com"><img src="SocialMediaIcons/IconEmail1.svg"></a>
+                </div>
+            </div>
+        </footer>
 
+        <script src="main.js"></script>
     </body>
 
 
