--- a/ministerioAlabanza.html
+++ b/ministerioAlabanza.html
@@ -36,7 +36,7 @@
             </header>
 
             <div class="alabanzaYoutubeContainer">
-                <iframe width="1000" height="550" src="https://www.youtube.com/embed/TIzv4SAWF9c?si=y9RsxIrjnknzj9V_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="alabanzaYoutubeVideo" width="1000" height="550" src="https://www.youtube.com/embed/TIzv4SAWF9c?si=y9RsxIrjnknzj9V_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="alabanzaDescriptionContainer">
