--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="page-wrap">
+        <div class="page-wrap home-page-wrap">
             <header class="main-header">
                 <!-- Leave space for logo.png to serve as the home button-->
                 <div class="header-container"> <!-- Container for all content in header -->
@@ -62,7 +62,7 @@
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <br>
+            
 
             <!-- The dots/circles -->
             <div style="text-align: center;">
