Completed events page
Completed events page and added border-radius to all website images

--- a/eventos.html
+++ b/eventos.html
@@ -42,7 +42,13 @@
                     </nav>
                 </div>
             </header>
-            <div>
+
+            <div class="horarioImageContainer">
+                <img src="ISRB_Servidores.jpg" id="horarioImage">
+                <div class="horarioImageText"><h1>Horarios de Servicio</h1></div>
+            </div>
+
+            <div class="horarioSlidesContainer">
                 <div><h2 class="horarioTitle">Horario</h2></div>
                 <div class="horarioSlides">
                     <div></div>
