--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                 <!-- Images with number and cpation text -->
                 <div class="mySlides fade">
                     <div class="number-text">1 / 3</div>
-                    <img src="stockImage1.png" style="width: 100%; max-height: 400px;">
+                    <img class="slidesImages" src="stockImage1.png" style="width: 100%; max-height: 400px;">
                     <div class="slideshow-caption">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="number-text">2 / 3</div>
-                    <img src="stockImage2.jpg" style="width: 100%; max-height: 400px;">
+                    <img class="slidesImages" src="stockImage2.jpg" style="width: 100%; max-height: 400px;">
                     <div class="slideshow-caption">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="number-text">3 / 3</div>
-                    <img src="stockImage3.jpg" style="width: 100%; max-height: 400px;">
+                    <img class="slidesImages" src="stockImage3.jpg" style="width: 100%; max-height: 400px;">
                     <div class="slideshow-caption">Caption Text</div>
                 </div>
 
