Finished contact page
optimized contact page and others for mobile too, discovered navbar bug in mobile version of horarios webpage

--- a/contacto.html
+++ b/contacto.html
@@ -34,6 +34,32 @@
                     </nav>
                 </div>
             </header>
+
+            <div class="contactMainContainer">
+                <div class="contactTitleContainer"><h1>Informacion de Contacto</h1></div>
+                <div class="contactDetailsContainer">
+                    <div class="contactMapsContainer">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.394088217531!2d-117.2891045878048!3d34.13625847301344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c35375c1d2eb69%3A0xae5cff9a200cf667!2sIglesias%20de%20Restauraci%C3%B3n%20San%20Bernardino!5e0!3m2!1sen!2sus!4v1741564698999!5m2!1sen!2sus" width="500" height="370 " style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="contactInfoContainer">
+                        <h2 class="contactInfoText">Iglesia Restauracion San Bernardino</h2>
+                        <p class="contactInfoText">172 W Highland Ave</p>
+                        <p class="contactInfoText">San Bernardino, CA 92405</p>
+                        <a href="tel:(909)-265-6877" class="contactInfoText">(909) 265-6877</a>
+                        <div class="contactIconContainer">
+                            <a href="https://www.facebook.com/restauracion.sanbernardino" target="_blank"><img class="biggerSocialMediaIcons" src="SocialMediaIcons/BiggerIcons/facebookIcon.png"></a>
+                            <a href="https://www.instagram.com/restauracionsanbernardino/" target="_blank"><img class="biggerSocialMediaIcons" src="SocialMediaIcons/BiggerIcons/instagramIcon.png"></a>
+                            <a href="https://www.youtube.com/@iglesiaderestauracionsanbe9627" target="_blank"><img class="biggerSocialMediaIcons" src="SocialMediaIcons/BiggerIcons/youtubeIcon.png"></a>
+                            <a href="mailto: restauracionsb@yahoo.com"><img class="biggerSocialMediaIcons" src="SocialMediaIcons/BiggerIcons/emailIcon.png"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactFormContainer">
+                    <div><button class="secondContactButton" onclick="contactForm()">Interesado en reunirse o tiene una pregunta? Haga clic para nuestra forma de contacto</button></div>
+                    <iframe style="display: none;" id="contactForm" src="https://docs.google.com/forms/d/e/1FAIpQLSfk5oZBtXBVfGgpahp-Dapal2FAG8pyrYVLhRdY_sACyPtCng/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>    
+                
+                </div>
+            </div>
         </div>
 
         <footer class="main-footer">
